# DamasInternacionales

./: CMakeLists.txt  README.md
Documentacion/: README_Desarrollo_Innovacion.md
src/: boardview.cpp  boardview.h  main.cpp
